<resources>
    <string name="app_name">CalculatorDemoApp</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="scopes">()</string>
    <string name="power">^</string>
    <string name="divide">/</string>
    <string name="multiply">X</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="plusMinus">+\-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="backspace">backspaceBtn</string>
    <string name="display">Enter in a value</string>
</resources>